Фикс проблемы со сваггером, не показывалась кнопка Authorize
